examples/bad/wrong-tuple-types.elina
fn main(): void {
  var t: tuple<int, tuple<bool, string>>;
  t = [11, [true, false]];
}